--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.custom-background {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: #303030;
+    color: white;
+}
+
+.error-message {
+    color: #f44336;
+    font-size: 13px;
+}
+
+.form-field {
+    width: 100%;
+    position: relative;
+}
