--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    lol
+    <button (click)="logout()" mat-raised-button color="primary" class="button">LOGOUT</button>
 </div>
