--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,6 @@
             <div class="error-message" *ngIf="passwordError">{{passwordError}}</div>
         </mat-form-field>
         <div class="error-message" style="margin-bottom: 20px;" *ngIf="messageError">{{messageError}}</div>
-        <button type="submit" style="padding: 25px; font-weight: 700; font-size: 16px;" mat-raised-button
-            color="primary">LOGIN</button>
+        <button type="submit" class="button" mat-raised-button color="primary">LOGIN</button>
     </form>
 </div>
