--- a/src/styles.css
+++ b/src/styles.css
@@ -25,3 +25,9 @@ body {
     width: 100%;
     position: relative;
 }
+
+.button {
+    padding: 25px;
+    font-weight: 700;
+    font-size: 16px;
+}
